# zero2production

./: .gitignore  Cargo.toml  Makefile  configuration.yaml
.github/actions/: general.yml
migrations/: 20220612224425_create_subscriptions_table.sql
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscription.rs
tests/: health_check.rs
