[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Hex <hex@cowboy.dev>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11.10"
serde = { version = "1.0.137", features = ["derive"] }
config = "0.11"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",

]
